# action-setup-python-poetry

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  poetry-update.yml
.run/: invalid_package_versions.run.xml
action_setup_python_poetry/: invalid_package_versions.py
action_setup_python_poetry/tests/: test_get_invalid_package_versions.py  test_get_version.py
action_setup_python_poetry/tests/data/: pyproject_mock_invalid.toml  pyproject_mock_no_dev_dependencies.toml  pyproject_mock_valid.toml
invalid_package_versions/: runner.py
invalid_package_versions/tests/: test_get_invalid_package_versions.py  test_get_version.py
invalid_package_versions/tests/data/: pyproject_mock_invalid.toml  pyproject_mock_valid.toml
