[tool.poetry]
name = "action-setup-python-poetry"
version = "0.1.0"
description = "GitHub Actions to setup Python and Poetry"
authors = ["moneymeets GmbH <service@moneymeets.com>"]


[tool.poetry.scripts]
invalid_package_versions = 'invalid_package_versions.runner:run'


[tool.poetry.dependencies]
python = "~3.12"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

ruff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
